# RXDAQ

./: .gitignore  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  WORKSPACE.bazel  config.json  logic.json  parameters.json  run.json  settings.json
bazel/: build_cxxopts.bazel  build_json.bazel  build_pixie_sdk.bazel  build_plxapi.bazel
include/: config.h  control_crate_service.h  crate.h  error.h  frame.h  interactor.h  message.h  parser.h  remote_crate.h  view.h
lib/: BUILD
lib/PlxApi/: BUILD
lib/pixie_sdk/: BUILD
lib/pixie_sdk/include/pixie/: fw.hpp
lib/pixie_sdk/src/pixie/: config.cpp  fw.cpp
lib/pixie_sdk/src/pixie16/: pixie16.cpp
main/: BUILD  Config.cpp  Config.h  Crate.cpp  Crate.h  Error.cpp  Error.h  Firmware.cpp  Firmware.h  Interactor.cpp  Interactor.h  Manager.cpp  Manager.h  RXDAQ.cpp  RXDAQ.h  defs.h  dstring.cpp  dstring.h  main.cpp
src/: CMakeLists.txt  config.cpp  control_crate_service.cpp  crate.cpp  error.cpp  frame.cpp  interactor.cpp  message.cpp  parser.cpp  remote_crate.cpp  view.cpp
src/proto/: BUILD.bazel  CMakeLists.txt  control_crate.proto
standalone/: BUILD.bazel  CMakeLists.txt  batch_mode.cpp  daq.cpp
test/: BUILD  BUILD.bazel  CMakeLists.txt  TestCrate.cpp  TestCrate.h  config_test.cpp  interactor_test.cpp  message_test.cpp  parser_test.cpp  test_crate.cpp  test_crate.h
test/Config/: BUILD  completionTest.cpp  correctionTest.cpp
test/Config/data/: BUILD
test/Config/data/completion/: Completion.json  CompletionModule.json  EmptyCrate.json  EmptyModule.json  EmptyTemplate.json  LackModule.json  LackSlots.json  LackTemplate.json  ModuleLackBits.json  ModuleLackFippi.json  ModuleLackLdr.json  ModuleLackPar.json  ModuleLackRate.json  ModuleLackRev.json  ModuleLackSys.json  ModuleLackTrig.json  ModuleLackVar.json  ModuleSizeError.json  NoTemplate.json  TemplateLackBits.json  TemplateLackFippi.json  TemplateLackLdr.json  TemplateLackPar.json  TemplateLackRate.json  TemplateLackRev.json  TemplateLackSys.json  TemplateLackTrig.json  TemplateLackVar.json
test/Config/data/correction/: config.json
test/Interactor/: BUILD  parserTest.cpp
test/data/: BUILD.bazel
test/data/config/completion/: completion-module.json  completion.json  empty-modules.json  empty-templates.json  invalid-slot.json  lack-crate-id.json  lack-modules.json  lack-parameter-file.json  lack-run.json  lack-template.json  lack-xia-log-level.json  module-lack-bits.json  module-lack-ldr.json  modules-size-over-range.json  no-templates.json  run-lack-data-path.json  run-lack-number.json  slot-conflict.json  template-lack-name.json  template-lack-rev.json
test/data/config/correction/: config.json
test/dstring/: BUILD  colorPrefixTest.cpp  outputTest.cpp
