load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "interactor",
	srcs = ["src/interactor.cpp"],
	hdrs = ["include/interactor.h"],
	includes = ["include"],
	copts = ["-std=c++17"],
	visibility = ["//visibility:public"]
)

cc_library(
	name = "parser",
	srcs = ["src/parser.cpp"],
	hdrs = ["include/parser.h"],
	includes = ["include"],
	copts = ["-std=c++17"],
	deps = ["interactor"],
	visibility = ["//visibility:public"]
)