load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "error",
	srcs = ["src/error.cpp"],
	hdrs = ["include/error.h"],
	includes = ["include"],
	copts = ["-std=c++17"],
	visibility = ["//visibility:public"]
)

cc_library(
	name = "message",
	srcs = ["src/message.cpp"],
	hdrs = ["include/message.h"],
	includes = ["include"],
	copts = ["-std=c++17"],
	visibility = ["//visibility:public"]
)

cc_library(
	name = "config",
	srcs = ["src/config.cpp"],
	hdrs = ["include/config.h"],
	includes = ["include"],
	copts = ["-std=c++17"],
	deps = ["@json//:json", "error"],
	visibility = ["//visibility:public"]
)

cc_library(
	name = "crate",
	srcs = ["src/crate.cpp"],
	hdrs = ["include/crate.h"],
	includes = ["include"],
	copts = ["-std=c++17"],
	deps = [
		"error",
		"config",
		"message",
		"@PixieSDK//:PixieSDK",
		"@json//:json"
	],
	visibility = ["//visibility:public"]
)

cc_library(
	name = "view",
	srcs = ["src/view.cpp"],
	hdrs = ["include/view.h"],
	includes = ["include"],
	copts = ["-std=c++17"],
	deps = [
		"error"
	],
	visibility = ["//visibility:public"]
)

cc_library(
	name = "interactor",
	srcs = ["src/interactor.cpp"],
	hdrs = ["include/interactor.h"],
	includes = ["include"],
	copts = ["-std=c++17"],
	deps = [
		"crate",
		"error",
		"view",
		"control_crate_service",
		"@cxxopts//:cxxopts"
	],
	visibility = ["//visibility:public"]
)

cc_library(
	name = "parser",
	srcs = ["src/parser.cpp"],
	hdrs = ["include/parser.h"],
	includes = ["include"],
	copts = ["-std=c++17"],
	deps = ["interactor", "error"],
	visibility = ["//visibility:public"]
)

cc_library(
	name = "frame",
	srcs = ["src/frame.cpp"],
	hdrs = ["include/frame.h"],
	includes = ["include"],
	copts = ["-std=c++17"],
	deps = [
		"parser",
		"interactor",
		"crate",
		"remote_crate"
	],
	visibility = ["//visibility:public"]
)

cc_library(
	name = "remote_crate",
	srcs = ["src/remote_crate.cpp"],
	hdrs = ["include/remote_crate.h"],
	includes = ["include"],
	copts = ["-std=c++17"],
	deps = [
		"crate",
		"//src/proto:control_crate",
		"@com_github_grpc_grpc//:grpc++"
	],
	visibility = ["//visibility:public"]
)


cc_library(
	name = "control_crate_service",
	srcs = ["src/control_crate_service.cpp"],
	hdrs = ["include/control_crate_service.h"],
	includes = ["include"],
	copts = ["-std=c++17"],
	deps = [
		"crate",
		"//src/proto:control_crate",
		"@com_github_grpc_grpc//:grpc++"
	],
	visibility = ["//visibility:public"]
)


