load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# googletest
http_archive(
  name = "com_google_googletest",
  urls = ["https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip"],
  strip_prefix = "googletest-5376968f6948923e2411081fd9372e71a59d8e77",
)

# xiallc pixiesdk
http_archive(
	name = "PixieSDK",
	urls = ["https://github.com/xiallc/pixiesdk/archive/27ba537b4acb87a1911af9514a89f092b33b50d8.zip"],
	strip_prefix = "PixieSDK-27ba537b4acb87a1911af9514a89f092b33b50d8",
	build_file = "@//:bazel/build_pixie_sdk.bazel"
)

# PlxApi
new_local_repository(
	name = "PlxApi",
	path = "/home/test/Dependencies/broadcom/pcisdk",
	build_file = "@//:bazel/build_plxapi.bazel"
)

# nlohmann/json
http_archive(
	name = "json",
	urls = ["https://github.com/nlohmann/json/archive/307c053b9b250abc6e6d478a4336fd98592ae173.zip"],
	strip_prefix = "json-307c053b9b250abc6e6d478a4336fd98592ae173/single_include",
	build_file = "@//:bazel/build_json.bazel"
)

# jarro2783/cxxopts
http_archive(
	name = "cxxopts",
	urls = ["https://github.com/jarro2783/cxxopts/archive/f7cf84bd56b47728e4674f316d274b3d82a1cfb3.zip"],
	strip_prefix = "cxxopts-f7cf84bd56b47728e4674f316d274b3d82a1cfb3/include",
	build_file = "@//:bazel/build_cxxopts.bazel"
)

# grpc
http_archive(
	name = "com_github_grpc_grpc",
	urls = ["https://github.com/grpc/grpc/archive/v1.48.1.tar.gz"],
	strip_prefix = "grpc-1.48.1"
)
load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")
grpc_deps()
load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")
grpc_extra_deps()